# api/src/main/resources/openapi.json
@@ -5553,15 +5553,25 @@
                   "summary": "Default",
                   "value": {
                     "fromPublicKey": "d1b70d2226308b46da297486adb6b4f1a8c1842cb159ac5ec04f384fe2d6f5da28",
-                    "code": "0ecd20654c2e2be708495853e8da35c664247040c00bd10b9b13"
+                    "bytecode": "0ecd20654c2e2be708495853e8da35c664247040c00bd10b9b13"
                   }
                 },
                 "Example1": {
                   "summary": "More settings",
                   "value": {
                     "fromPublicKey": "d1b70d2226308b46da297486adb6b4f1a8c1842cb159ac5ec04f384fe2d6f5da28",
-                    "code": "0ecd20654c2e2be708495853e8da35c664247040c00bd10b9b13",
-                    "state": "#0ef875c5a01c48ec4c0332b1036cdbfabca2d71622b67c29ee32c0dce74f2dc7",
+                    "bytecode": "0ecd20654c2e2be708495853e8da35c664247040c00bd10b9b13",
+                    "initialFields": [
+                      {
+                        "type": "Bool",
+                        "value": true
+                      },
+                      {
+                        "type": "U256",
+                        "value": "123"
+                      }
+                    ],
+                    "alphAmount": "2000000000000000000",
                     "issueTokenAmount": "2000000000000000000",
                     "gas": 20000,
                     "gasPrice": "100000000000",
@@ -5581,11 +5591,10 @@
                   "$ref": "#/components/schemas/BuildContractResult"
                 },
                 "example": {
+                  "group": 2,
                   "unsignedTx": "0ecd20654c2e2be708495853e8da35c664247040c00bd10b9b13",
                   "hash": "798e9e137aec7c2d59d9655b4ffa640f301f628bf7c365083bb255f6aa5f89ef",
-                  "contractId": "1a21d30793fdf47bf07694017d0d721e94b78dffdc9c8e0b627833b66e5c75d8",
-                  "fromGroup": 2,
-                  "toGroup": 2
+                  "contractAddress": "vSxdLL2kE3o6vJBdKkdgmS3W39G3ZEmFHpo2y1jnbzBq"
                 }
               }
             }
@@ -7644,18 +7653,25 @@
       "BuildContract": {
         "required": [
           "fromPublicKey",
-          "code"
+          "bytecode"
         ],
         "type": "object",
         "properties": {
           "fromPublicKey": {
             "type": "string"
           },
-          "code": {
+          "bytecode": {
             "type": "string"
           },
-          "state": {
-            "type": "string"
+          "initialFields": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Val"
+            }
+          },
+          "alphAmount": {
+            "type": "string",
+            "format": "uint256"
           },
           "issueTokenAmount": {
             "type": "string",
@@ -7675,28 +7691,24 @@
       },
       "BuildContractResult": {
         "required": [
+          "group",
           "unsignedTx",
           "hash",
-          "contractId",
-          "fromGroup",
-          "toGroup"
+          "contractAddress"
         ],
         "type": "object",
         "properties": {
+          "group": {
+            "type": "integer"
+          },
           "unsignedTx": {
             "type": "string"
           },
           "hash": {
             "type": "string"
           },
-          "contractId": {
+          "contractAddress": {
             "type": "string"
-          },
-          "fromGroup": {
-            "type": "integer"
-          },
-          "toGroup": {
-            "type": "integer"
           }
         }
       },
